syntax = "proto3";

package im.ghasedak.api;

option java_package = "im.ghasedak.api.auth";
option java_multiple_files = true;

import "api/user.proto";

message ApiAuth {
    string token = 1;
    ApiUser user = 2;
}